--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Landing Page</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    padding: 100px;
+  }
+  .button {
+    display: inline-block;
+    padding: 15px 30px;
+    margin: 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    text-decoration: none;
+  }
+</style>
+</head>
 <body>
-
-<h1>My First Heading From Git</h1>
-
-<p>My first paragraph.</p>
-
+  <h1>Welcome to Our Landing Page</h1>
+  <p>Explore our options below:</p>
+  <div>
+    <a class="button" href="https://www.example.com/page1">Button 1</a>
+    <a class="button" href="https://www.example.com/page2">Button 2</a>
+    <a class="button" href="https://www.example.com/page3">Button 3</a>
+    <a class="button" href="https://www.example.com/page4">Button 4</a>
+  </div>
 </body>
 </html>
