--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
   <h1>Welcome to Our Landing Page</h1>
   <p>Explore our options below:</p>
   <div>
-    <a class="button" href="https://www.example.com/page1">Button 1</a>
-    <a class="button" href="https://www.example.com/page2">Button 2</a>
-    <a class="button" href="https://www.example.com/page3">Button 3</a>
-    <a class="button" href="https://www.example.com/page4">Button 4</a>
+   <div>
+  <a class="button" href="page1.html">Button 1</a>
+  <a class="button" href="page2.html">Button 2</a>
+  <a class="button" href="page3.html">Button 3</a>
+  <a class="button" href="page4.html">Button 4</a>
+</div>
   </div>
 </body>
 </html>
