--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <p>Explore our options below:</p>
   <div>
    <div>
-  <a class="button" href="page1.html">Button 1</a>
+  <a class="button" href="folder/page1.html">Button 1</a>
   <a class="button" href="page2.html">Button 2</a>
   <a class="button" href="page3.html">Button 3</a>
   <a class="button" href="page4.html">Button 4</a>
