--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </style>
 </head>
 <body>
-  <h1>Welcome to Soft Polynomials Nagpur IT Projects Page</h1>
+  <h1>Welcome to Soft Polynomials Nagpur IT Projects</h1>
   <p>Explore our options below:</p>
   <div>
    <div>
